--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "scripts": {
+    "format": "prettier --write 'src/**/*.js'"
   }
 }
